upload trumi photo and fix header position on tablet about page

--- a/src/app/pages/About.module.css
+++ b/src/app/pages/About.module.css
@@ -454,6 +454,7 @@
 
   .sectionTitle {
     margin-bottom: 48px;
+    text-align: center;
   }
 
   .designerImage {
@@ -470,6 +471,7 @@
 
   .outsideDesignTitle {
     margin-bottom: 48px;
+    text-align: center;
   }
 
   .outsideDesignImage {
